--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contact</title>
-        <link rel="stylesheet" type="text/css" href="css.css" /></head>
-
-</head>
-<body>
-    <h1> Croissant 🥐
-    </h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="CSS.css" />
+    <title>Mahsas project croissant Contact us</title>
+  </head>
+  <body>
+    <h1>🥐 Contact us</h1>
     <p>
-        Are croissants healthy?<br />
-Beyond Flaky Delight: Nutritional Value of Croissants
-While croissants do provide some nutritional benefits, they're also high in fats and calories. They're best enjoyed as part of a balanced diet, rather than a daily breakfast item. Pairing a croissant with fruits, lean proteins, and other nutrient-dense foods can help balance your mea
+      Email us at
+      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
-    <br />
-    <a href="photo.html">photo of croissant!</a> 
-    <br/>
-    <a href="index.html">croissant?</a>
-</body>
+    <footer>
+      <a href="/"> Homepage</a>
+      <a href="/photo.html"> Photo</a>
+      <a href="/contact.html"> Contact</a>
+    </footer>
+  </body>
 </html>
