--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Croissant 🥐</title>
-        <link rel="stylesheet" type="text/css" href="css.css" /></head>
-
-</head>
-<body>
-    <h1> Croissant 🥐
-    </h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="CSS.css" />
+    <title>Mahsas project croissant</title>
+  </head>
+  <body>
+    <h1>🥐 Croissant</h1>
     <p>
-        A croissant is a French pastry made from puff pastry in a crescent shape. <br />
-        is a buttery, flaky, viennoiserie pastry inspired by the shape of the Austrian kipferl but using the French yeast-leavened laminated dough. Croissants are named for their historical crescent shape.
+      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
+      named for its historical crescent shape. Croissants and other viennoiserie
+      are made of a layered yeast-leavened dough
     </p>
-    <a href="photo.html">photo of croissant!</a>
-    <br/>
-    <a href="contact.html">Why croissant?</a>
-</body>
+    <footer>
+      <a href="/"> Homepage</a>
+      <a href="/photo.html"> Photo</a>
+      <a href="/contact.html"> Contact</a>
+    </footer>
+  </body>
 </html>
