--- a/photo.html
+++ b/photo.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>photo</title>
-        <link rel="stylesheet" type="text/css" href="css.css" /></head>
-
-</head>
-<body>
-    <h1> Croissant 🥐
-    </h1>
-    <br />
-    <a href="index.html">croissant!</a>
-    <br/>
-    <a href="contact.html">Why croissant?</a>
-    <img src="croissantt.jpg">
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=
+  , initial-scale=1.0"
+    />
+    <link rel="stylesheet" href="CSS.css" />
+    <title>Mahsas project croissant photo</title>
+  </head>
+  <body>
+    <h1>🥐 A picture of a croissant</h1>
+    <img src="/images/croissant.jpg" alt="" class="croissant-photo" />
+    <footer>
+      <a href="/"> Homepage</a>
+      <a href="/photo.html"> Photo</a>
+      <a href="/contact.html"> Contact</a>
+    </footer>
+  </body>
 </html>
